bynkc/tests/fixtures/positive/80_effect_type/input.bynk
commons demo

fn pureAnswer(n: Int) -> Effect[Int] {
  Effect.pure(n)
}
