bynkc/tests/fixtures/negative/274_contract_result_in_requires/src/demo/c.bynk
commons demo.c

fn f(x: Int) -> Int
  requires bad: result > 0
{
  x
}
